se mejoro login

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
 
 @media (prefers-color-scheme: dark) {
     :root {
-        color: #213547;
+        color: #FFF;
         background-color: #ffffff;
     }
     a:hover {
