refinamiento de header

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@
     :root {
         color: #FFF;
         background-color: #ffffff;
+        /* background-color: #909090; */
     }
     a:hover {
         color: #747bff;
